# ai_worker

./: .env.example  .gitignore  AGENTS.md  Main.md  PROJECT_STATUS_FOR_CEO.md  README.md  START_PROJECT.cmd  STOP_PROJECT.cmd  docker-compose.yml  test_protocol.md
backend/: Dockerfile  __init__.py  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_conversation_messages.py  0003_search_request_max_results.py  0004_conversation_message_provider_timestamp.py  0005_sourcingai_search_fields.py
backend/app/: __init__.py  agent.py  broker.py  config.py  connectors.py  database.py  domain.py  main.py  model_providers.py  observability.py  postgres_repository.py  reliability.py  repositories.py  search_providers.py  sourcing.py  worker.py  workers.py
docs/: connectors.md  development.md  e2e-report-template.md  mvp-limitations.md  one-click-deploy.md  ooo.md  project-technical-brief-for-gpt.md  restart-guide.md  tech_brief.md  testing.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
made_in_china/: Two-Axis Four-Sensor Camera, 8mm Focal Length, Uncooled Detector - Uncooled Detector and Four-Sensor Detector.html
openspec/: config.yaml  project.md
scripts/: bootstrap-workstation.ps1  configure-secrets.ps1  contracts_schema.sql  e2e_cleanup.sql  e2e_preflight.py  install-ollama-portable.ps1  pull-local-model.ps1  start-browser-mcp-local.ps1  start-lan-dev.ps1  start-local.ps1  start-ollama-local.ps1  stop-project.ps1  verify_traceability.py
searxng/: settings.yml
(+192 files in other folders)
