[project]
name = "product-sourcing-backend"
version = "0.1.0"
description = "Backend and worker for the Product Sourcing MVP"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.2",
  "pydantic>=2.10",
  "pydantic-settings>=2.7",
  "redis>=5.2",
  "rq>=2.0"
]

[project.optional-dependencies]
test = [
  "pytest>=8.3",
  "httpx>=0.28"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

